@@ -36,6 +36,7 @@ $.widget("asm.personchooser", {
         towns: "",
         counties: "",
         towncounties: "",
+        postcodelookup: false,
         sites: [],
         jurisdictions: [],
         personflags: [],
@@ -127,7 +128,7 @@ $.widget("asm.personchooser", {
             '</tr>',
             '<tr>',
             '<td><label>' + _("Address") + '</label></td>',
-            '<td><textarea class="asm-textareafixed chooser" data="address" rows="3"></textarea></td>',
+            '<td><textarea class="asm-textareafixed chooser personchooser-address" data="address" rows="3"></textarea></td>',
             '</tr>',
             '<tr>',
             '<td><label>' + _("City") + '</label></td>',
@@ -144,7 +145,9 @@ $.widget("asm.personchooser", {
             '</tr>',
             '<tr>',
             '<td><label>' + _("Zipcode") + '</label></td>',
-            '<td><input class="asm-textbox chooser" data="postcode" type="textbox" /></td>',
+            '<td><input class="asm-textbox chooser personchooser-postcode" data="postcode" type="textbox" />',
+            '<button class="personchooser-postcodelookup">' + _("Lookup Address") + '</button>',
+            '</td>',
             '</tr>',
             '<tr class="personchooser-countryrow">',
             '<td><label>' + _("Country") + '</label></td>',
@@ -299,7 +302,7 @@ $.widget("asm.personchooser", {
 
         dialogadd.dialog({
             autoOpen: false,
-            width: 400,
+            width: 500,
             modal: true,
             dialogClass: "dialogshadow",
             show: dlgfx.add_show,
@@ -315,6 +318,20 @@ $.widget("asm.personchooser", {
                 dialogadd.find(".personchooser-country").val(config.str("OrganisationCountry"));
                 // Default the jurisdiction
                 dialogadd.find(".personchooser-jurisdiction").select("value", config.str("DefaultJurisdiction"));
+                // Postcode lookup button
+                dialogadd.find(".personchooser-postcodelookup")
+                    .button({ icons: { primary: "ui-icon-search" }, text: false })
+                    .click(async function() {
+                        let country = dialogadd.find(".personchooser-country").val();
+                        let postcode = dialogadd.find(".personchooser-postcode").val();
+                        if (!country) { country = config.str("OrganisationCountry"); }
+                        let formdata = "mode=postcodelookup&country=" + country + "&postcode=" + postcode + "&locale=" + asm.locale + "&account=" + asm.useraccount;
+                        const response = await common.ajax_post("person_embed", formdata);
+                        const rows = jQuery.parseJSON(response);
+                        dialogadd.find(".personchooser-address").val( rows[0].street );
+                        dialogadd.find(".personchooser-town").val( rows[0].town );
+                        dialogadd.find(".personchooser-county").val( rows[0].county );
+                    });
                 // If we have a filter, set the appropriate person flags to match
                 if (self.options.filter) {
                     dialogadd.find(".personchooser-flags option[value='" + self.options.filter + "']").prop("selected", true);
@@ -364,6 +381,7 @@ $.widget("asm.personchooser", {
                 self.options.towns = d.towns;
                 self.options.counties = d.counties;
                 self.options.towncounties = d.towncounties;
+                self.options.postcodelookup = d.postcodelookup;
                 self.options.personflags = d.flags;
                 self.options.sites = d.sites;
                 self.options.jurisdictions = d.jurisdictions;
@@ -374,6 +392,8 @@ $.widget("asm.personchooser", {
                 if (!config.bool("USStateCodes")) {
                     dialogadd.find(".personchooser-county").autocomplete({ source: self.options.counties, minLength: 3 });
                 }
+                // Toggle visibility of postcode lookup
+                dialogadd.find(".personchooser-postcodelookup").toggle( d.postcodelookup );
                 // When the user changes a town, suggest a county if it's blank
                 dialogadd.find(".personchooser-town").blur(function() {
                     if (dialogadd.find(".personchooser-county").val() == "" && dialogadd.find(".personchooser-town").val() != "") {
