@@ -1,6 +1,7 @@
 46
 ================
 
+29/08/22 Address lookup from postcode for UK/Ireland/Canada/Holland #306
 27/08/22 Make animals and people hyperlinks in looking for report
 25/08/22 Allow multiple entry categories to be set for sac metrics #1153
 24/08/22 Allow upto 20 custom emblems
